--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+<head><link rel="stylesheet" type="text/css" href="style.css" >
+<title>Document structure lab</title> </head>
+<body></body>
+</html>
